[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A sample Python project"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
numpy = "^1.21.5"
# Add more dependencies as needed

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
# Add development dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
